# passwd_gen

./: .gitignore  Cargo.toml  LICENSE_MIT.txt  README.md
src/: args.rs  lib.rs  main.rs  password.rs
