[package]
name = "passwd_gen"
version = "0.1.0"
authors = ["John Hight <john@hight.net>"]
edition = "2021"
homepage = "https://github.com/hight"
repository = "https://github.com/jthight/passwd_gen"
readme = "README.md"
keywords = ["generate", "password","utility","commandline","random"]
categories = ["command-line-utilities","cryptography"]
license = "MIT OR Apache-2.0"
description = "A Cli utility to generate random passwords of a user defined length and quantity."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "2.0"
rand = "0.8"
clap = "3.0"
